--- a/Dispositioner/1. Confidentiality.md
+++ b/Dispositioner/1. Confidentiality.md
@@ -1,45 +1,46 @@
-> * Confidentiality
->     * Privat Key / Public key
->     * Ciphertext
-> * Private Key System
->     * One Time Pad
->         * XOR 
->         * Sikkerhed for One Time Pad
->             * Bruteforce
->     * Sikkerhed I secret-key
->         * Samme key flere gange
->         * Cost of attack
->     * Ciphers
->          * Stream Ciphers
->          * Block Ciphers
->     * Pro / Con
->         * Hurtig / Nøgler
-> * Public Key System
->     * Sikkerhed
->     * Tilfældighed
->     * Exhaustive search
->     * RSA
->         * Nøgler
->         * (De)Kryptering
->     * OAEP
->         * Pks til Sks
+* Motivation
+	* Privat / Public key
+	* Ciphertext
+* Private key systemer
+	* One Time Pad
+		* XOR
+		* Sikkerhed for One Time Pad
+			B* ruteforce
+	* Sikkerhed I secret-key
+		* Samme key flere gange
+		* NONCE
+		* Cost of attack
+	* Ciphers
+		* Stream ciphers
+		* Block Ciphers
+	* Pro / Con
+		* Hastighed og Nøgler
+* Public key systemer
+	* Sikkerhed
+		* Tilfældighed
+		* Key længde
+	* RSA
+		* Nøgler
+		* (De)Kryptering
+		* OAEP
+			* Public key til secrete key
 
 
 # Confidentiality
 
-Confidentiality, eller fortrolighed - altså at vi holder ting gemt for andre, kan vi inden for kryptografien gøre på to måder
+## Motivation
 
-## Private og public key
+Confidentiality, eller fortrolighed - altså at vi holder ting gemt for andre, kan vi inden for kryptografi gøre på to måder.
 
-### Privat key
+### Privat / Public key
 Enten bruger vi **private key**, hvor alle parter kender en hemmelig kode, som ingen andre må kende.
 
-### Public key
 Eller så bruger vi en **public key** system, hvor man har sin egen hemmelige nøgle, og andre har en offentlige nøgle.
 
-Kort sagt, kan **andre sende** noget krypteret under ens offentlige nøgle, og kun en selv med den hemmelige kan læse det.
+Kort forklaret, kan **andre sende** noget krypteret under ens offentlige nøgle, og kun en selv med den hemmelige kan læse det.
 
 ### Ciphertext
+
 Så for begge gælder det at vi bruger en key til at krypter noget data, til hvad vi kalder **ciphertext**:
 
 > c = E_k(data)
@@ -50,23 +51,24 @@ Lad os først tage et eksempel på hvordan **vi kan lave et private-key system**
 
 ### One Time Pad
 
-One Time Pad, har hvad vi kalder Ubetinget sikkerhed, hvilket betyder simpelt at det er sikkert, og **intet kan være mere sikkert**.
+One Time Pad er sådan et system, har hvad vi kalder **Ubetinget sikkerhed**, hvilket betyder simpelt at det er sikkert, og **intet kan være mere sikkert**.
 
 Uanset mængden af **computerkræft** til rådighed, vil man ikke kunne vide indholdet af en ciphertext.
 
 Dette er ideen bag **One Time Pad**, hvor at en key kun bruges en gang.
 
-> One Time Pad
+> **One Time Pad Key**
 > 
-> * Keys bruges kun en gang
-> * Keys er lige så lange som beskeder
+> * Bruges kun en gang
+> * Er tilfældig
+> * Længde som besked
 > * Keys **XOR's** med beskeder for at få ciphertekst 
 
-Fordi XOR er en **uniform proces**, kan man ved at have ved at **have to fra sættes**
+Fordi XOR er en **uniform proces**, kan man ved at **have to fra sættes**
 
 > {M, K, C}
 
-Altid få fat I den sidste.
+Altid udregne fat I den sidste.
 
 #### XOR
 
@@ -110,9 +112,9 @@ Vores krypterings algoritme bliver da:
 
 Derfor vil en fremmed, aldrig kunne se at den samme besked er sendt flere gange under samme nøgle.
 
-#### Exhaustive search
+#### Cost of attack
 
-Hvis en fremmed får fat i nogle beskeder og deres ciphertexter; kan han prøve at bruteforce deres nøgler.
+Hvis en **fremmed får fat** i nogle beskeder og deres ciphertexter; kan han prøve at bruteforce deres nøgler.
 
 Derfor bruger vi **lange nøgler**, med minimum 128 bit længde.
 
@@ -125,26 +127,25 @@ Hvilket er **for mange** til en fremmed at regne ud.
 
 Et angreb vil altså have et for højt - **Cost of attack**.
 
-> Cost of attack
+### Ciphers
 
-#### Ciphers
+I private key systemer, bruger vi to forskellige måde at lave ciphers på.
 
-I secrete key systemer, bruger vi to forskellige måde at lave ciphers på.
+#### Stream ciphers
 
-##### Stream ciphers
-Streamciphers gør det muligt at lave keys der er lige så lange som vores beskeder.
+Streamciphers gør det muligt at **lave keys** der er **lige så lange som vores beskeder**.
 
 > G(k, n)
 
-Den tager vores _normale_ key og vores nonce, hvorfor vi nu kan bruge XOR.
+Den tager vores *normale key og vores nonce*, hvorfor vi nu kan bruge XOR.
 
-> c = m ⊕ G
+> c = m ⊕ G(K, n)
 
 **Forskellen** ved dette og den rigtige One Time Pad, er at G **kun ser tilfældig ud, men ikke er det.**
 
 Det **kaldes** stream cipher, da man blot vil kunne **initialisere G** og så bare **streame fra den**.
 
-##### Block Ciphers
+#### Block Ciphers
 
 I stedet for at kryptere hele beskeden på en gang, så sker det **over flere gange**.
 
@@ -160,11 +161,11 @@ Alle tre måder virker ved:
 
 Hvor IV (initialization vector) blot er det samme som nonce.
 
-**I Output Feedback** kan **bruges** som en **stream** til at XOR med, og bruges som: ENCk(IV), ENCk(ENCk(IV)), ...
+**Output Feedback** kan **bruges** som en **stream** til at XOR med, og bruges som: ENCk(IV), ENCk(ENCk(IV)), ...
 
 > OFM = ENCk(IV), ENCk(ENCk(IV)), ...
 
-**I Cipher Block Chaining** arbejder vi altså med **blokke af data**, hvor den **sidste er pattet.** Vi lader cipherteksten tage den sidste ciphertekst som input
+**I Cipher Block Chaining** arbejder vi altså med **blokke af data**, hvor den **sidste er pattet.** Vi lader krypteringen tage den sidste ciphertekst som input
 
 > Ci = ENCk(Mi ⊕ Ci-1)
 
@@ -176,29 +177,28 @@ Og lader
 
 > Ci = ENK(IV + i) ⊕ Mi
 
-#### Pro / Con
-##### Hurtig
-hurtigt 10-100 Mbytes/sec ved software, hurtigere ved dedikeret hardware
+### Pro / Con
+#### Hastighed og Nøgler
 
-##### Nøgler
+**Pro**: Secret key systemer er hurtige, 10-100 Mbytes/sec ved software, hurtigere med dedikeret hardware
 
-key skal være delt før data sendes. Specielt problem hvis flere brugere skal kommunikere og alle have hinanden nøgle.
+**Con**: Key skal være delt før data sendes. Specielt problem hvis flere brugere skal kommunikere og alle have hinanden nøgle.
 
 ## Public key systemer
 
-### Nøgler
 Her har hvert part som sagt en privat og en offenlig nøgle.
 
 Hvor man krypter med en public nøgle, og den private nøgle der passer til - er så den eneste der kan dekryptere beskeden igen.
 
 ### Sikkerhed
+
 Der er en **speciel sammenhæng** i mellem ens private og en public nøgle - men som er meget svær at regne ud.
 
-Så har man en public key, er det virkelig svært at udregne den private nøgle.
+Så har man en public key, er det virkelig **svært at udregne den private nøgle**.
 
 Derfor vil en fremmed der har en c og en publik key, ikke kunne se indholdet.
 
-### Tilfældighed
+#### Tilfældighed
 
 Det er desuden vigtigt at hver kryptering indeholder noget tilfældigt.
 
@@ -208,7 +208,7 @@ For hvis man får en _c_, vil man blot kunne kryptere en masse indtil man får:
 
 Hvorfor man ved hvad c er.
 
-### Exhaustive Search
+#### Key længde
 
 Der findes algoritme der kan "hurtigt" udregne **sk fra pk**.
 
@@ -216,7 +216,7 @@ Så derfor bruger vi i public-key systemer meget større keys.
 
 Jeg mindes vi brugte 2048 bit.
 
-> Public key længde. 2048 bit
+> Public key længde: 2048 bit
 
 ### RSA
 
@@ -224,22 +224,22 @@ Er en måde at lave Public Key systemet på.
 
 #### Nøgler
 
-Publik kexen består af to numre:
+Publik keyen består af to numre:
 
-> Pk = n og e
+> Pk = e og n
 
 Og Secrete key består af:
 
-> Sk = n og d
+> Sk = d og n
 
 N kaldes for modulet og er et **produkt af to primtal**. De andre numre er valgt til at tilfredstille en bestemt relation.
 
-#### kryptering
+#### (De)Kryptering
+
 Så på grund af matematik (?) så virker kryptering ved:
 
 > c = m^e % n
 
-#### Dekryptering
 Og igen på grund af matematik så virker dekryptering ved at sige:
 
 > m = c^d % n
