--- a/Dispositioner/2. Authentication.md
+++ b/Dispositioner/2. Authentication.md
@@ -1,27 +1,30 @@
-> * Tabel løsning - ubetinget sikkerhed
-> * Beregningstungt sikkerhed
-> 	* Secret key
-> 		* Algoritmer
-> 		* Sikkerhed
-> 		* Eksempel: CBC-MAC
-> 	* Public Key
-> 		* Algoritmer
-> 		* 	Sikkerhed
-> 		* Fordele ved public-key
-> 		* RSA Implementering
-> 		* RSA PROBLEM
-> * Hashfunktioner
-> 	* RSA & Hash
-> * Replay Attack
-> 	* NONCE
+* Motivation
+* Tabel løsning - ubetinget sikkerhed
+* Beregningstungt sikkerhed
+	* Secret key
+		* Algoritmer
+		* Sikkerhed, key længde
+		* Eksempel: CBC-MAC
+	* Public Key
+		* Algoritmer
+		* Sikkerhed, Key Længde
+		* Fordele ved public-key
+		* RSA Implementering
+			* Problem
+	* Hashfunktioner
+	* RSA & Hash
+	* Replay Attack
+		* NONCE
 
 # Authentication
 
-Så når vi snakker om authentication, så er det ideen om, at vi vil kunne **bekræfte identiteten** for den vi kommunikere med.
+## Motivation
+
+Så når vi snakker om authentication, så er det ideen om, at vi vil kunne **bekræfte hvem en besked kommer fra**.
 
 ## Tabel løsning - ubetinget sikkerhed
 
-En løsning der giver **ubetinget sikkerhed**, hvor det simpelt ikke er muligt at for en fremmed at udnytte systemet.
+En løsning der giver **ubetinget sikkerhed**, der betyder, at det simpelt ikke er muligt at for en fremmed at udnytte systemet - er at bruge en tabel.
 
 Sender og modtager **aftaler** en MAC for hver mulig besked på forhånd.
 
@@ -53,13 +56,14 @@ Vi kigger derfor på to tilgange til dette.
 Et **secret key system** er hvor parterne på forhånd har **aftalt en nøgle**, som de bruger til at godkende hinandens beskeder.
 
 #### Algoritmer
+
 Der er tre algoritme:
 
 > * `G = k` laver en nøgle
 > * `MACk(m) = c` laver en MAC for _m_ under nøglen _k_
 > * `Vk(m, c) = true/false` verificere MAC'en for beskeden
 
-#### Sikkerhed
+#### Sikkerhed, key længde
 
 I sådan et secret key system, så skal det **aldrig** være muligt for en fremmed at **lave en gyldig MAC**. 
 
@@ -75,8 +79,8 @@ Lad os tage et eksempel! **Cipher Block Chaining Mac**, er en algoritme til at l
 
 Den laver en MAC ved dele beskeden op i dele, og så maccer en del ad gangen.
 
-> C0 = IV
-> Ci = AESk(Mi ⊕ Ci-1)
+> * C0 = IV
+> * Ci = ENCk(Mi ⊕ Ci-1)
 
 Vi kan altså se, at en C er afhængig af den **udregnet før**.
 
@@ -98,7 +102,7 @@ Der er tre algoritme:
 > * `SIGNsk(m) = c` laver en signatur for _m_ under nøglen _sk_
 > * `Vpk(m, c) = true/false` verificere signaturen for beskeden
 
-#### Sikkerhed
+#### Sikkerhed, Key Længde
 
 I sådan et public key system, så skal det **aldrig** være muligt for en fremmed at **lave en falsk men gyldig signatur**. 
 
@@ -124,9 +128,9 @@ Og algoritmerne:
 > * `SIGNsk(m): m^d % n` 
 > * `Vpk(m, s): (s^e % n) == m`
 
-#### RSA PROBLEM
+##### Problem
 
-Et problem er, at en **fremmed** kan bare **vælge et tal** og sige det er en **signatur** - og udføre noget af _v_ herpå, for at få en _m_.
+Et problem er, at en **fremmed** kan bare **vælge et tal** og sige det er en **signatur** - og udføre venstre del af _v_ herpå, for at få en _m_.
 
 > m = s^e % n
 
