--- a/Dispositioner/3. Key Management and infrastructure.md
+++ b/Dispositioner/3. Key Management and infrastructure.md
@@ -1,3 +1,4 @@
+* Motivation
 * Session Keys
 	* Long term key
 * Key Distribution Centers
@@ -6,22 +7,21 @@
 * Certification Authorities
 	* Registrering
 	* Sikkerhed
-	* Certificate Chains
-		* Eksempel, untrusted CA
+* Certificate Chains
+	* Eksempel, untrusted CA
 * Tilkendegivelse
 	* Kodeord
-		* Sikkerhed
-			* Kvalitet
-			* Server
+		* Sikkerhed: kvalitet og server
 	* Hardware
 		* Tamper Evident
 			* Two Factor Authentication
 		* Tamper Resident
 	* Biometrics
 		* Buffer til forandring
-		* Pro / Con
 
-# 3. Key Management and infrastructure
+# Key Management and infrastructure
+
+## Motivation
 
 Så i kurset har vi snakket rigtig meget om nøgler, og nu skal vi så finde ud af - hvordan nøgler bliver administreret.
 
@@ -73,18 +73,20 @@ Nu kan A og B snakke sammen under session keyen.
 
 ### Problemer
 
-* Hvis KDC'en bryder ned, kan ingen snakke sammen
-* Man kan ikke vide om en forbindelse er sikker; en session key kunne være sendt flere steder hen.
-* Det kræver alle stoler på KDC'en, da den har den ultimative mulighed for at afkode alle beskeder, eftersom det er den som genere nøglerne.
+Hvis **KDC'en bryder ned**, kan ingen snakke sammen.
+
+Man kan ikke vide om en **forbindelse er sikker**; en session key kunne være sendt flere steder hen.
+
+Det kræver alle **stoler** på **KDC'en**, da den har den ultimative mulighed for at **afkode alle beskeder**, eftersom det er den som genere nøglerne.
 
 ## Certification Authorities
 
 Hvor KDC'er bruger Secret Keys, bruger Certification Authorities Public Key systemer.
 
-CA'en starter med at genere sit egen key-pair (SKca, PKca); og alle brugere af CA'en vil have dens public-key.
+**CA'en** starter med at *  sit egen *  (SKca, PKca); og alle brugere af CA'en får dens public-key.
 
 > * CA laver et keypair
-> * Alle har PKca
+> * Alle får PKca
 
 At alle har PKca bruges senere til at garantere, at man kan stole på modtageren.
 
@@ -114,7 +116,7 @@ Alle kan nu **tjekke dette certifikat**, fordi de har PKca. Og derved senere sen
 
 Sikkerheden ved at bruge en CA, ligger i - at vi **alle stoler på den ikke uddeler certifikater på flaske grundlag**.
 
-Derfor kan parter nu udstede certifikater, tjekke hinandens - og kommunikere frit med hinandens keys som kryptering.
+Derfor kan parter nu dele certifikater, tjekke hinandens - og kommunikere frit med hinandens keys som kryptering.
 
 ## Certificate Chains
 
@@ -225,10 +227,3 @@ Alle virker ved at blive omdannet til noget digitalt data, som så bliver matche
 #### Buffer til forandring
 
 Det store problem her; er at systemet skal have en hvis buffer i forhold til at vi som levende organismer konstant er i forandring; men samtidig aldrig lade en fremmed komme ind der forsøger at udgive sig for os.
-
-
-#### Pro / Con
-> * Pro: Vi skal ikke huske en kode
-> * Con: Vi er ikke anonyme længere
-
-	
