--- a/Dispositioner/1. Confidentiality.md
+++ b/Dispositioner/1. Confidentiality.md
@@ -1,14 +1,11 @@
 * Motivation
-	* Privat / Public key
-	* Ciphertext
 * Private key systemer
 	* One Time Pad
-		* XOR
 		* Sikkerhed for One Time Pad
-			B* ruteforce
+			* Bruteforce
 	* Sikkerhed I secret-key
 		* Samme key flere gange
-		* NONCE
+		* *NONCE*
 		* Cost of attack
 	* Ciphers
 		* Stream ciphers
@@ -51,11 +48,9 @@ Lad os først tage et eksempel på hvordan **vi kan lave et private-key system**
 
 ### One Time Pad
 
-One Time Pad er sådan et system, har hvad vi kalder **Ubetinget sikkerhed**, hvilket betyder simpelt at det er sikkert, og **intet kan være mere sikkert**.
+One Time Pad har hvad vi kalder **Ubetinget sikkerhed**, hvilket betyder simpelt at det er sikkert, og **intet kan være mere sikkert**.
 
 Uanset mængden af **computerkræft** til rådighed, vil man ikke kunne vide indholdet af en ciphertext.
-
-Dette er ideen bag **One Time Pad**, hvor at en key kun bruges en gang.
 
 > **One Time Pad Key**
 > 
@@ -68,9 +63,7 @@ Fordi XOR er en **uniform proces**, kan man ved at **have to fra sættes**
 
 > {M, K, C}
 
-Altid udregne fat I den sidste.
-
-#### XOR
+Altid udregne I den sidste.
 
 Derfor så har vi at One Time Pad virker:
 
@@ -84,15 +77,13 @@ Men fordi keyen er lige så lang som beskeden, vil det tage tiden 2^t hvor t er 
 
 > bruteforde tid = 2^t
 
-##### Bruteforce
-
 Men her kommer **problemet** ved bruteforce, nemlig at vi bruger **XOR**.
 
 Derfor vil **mange plausible løsninger** kommer frem, og vi **ved ikke hvilken** der er rigtig.
 
 **One Time Pad virker kun**, hvis både sender og modtager **kender alle keys** for hver eneste besked der vil sendes frem og tilbage.
 
-### Sikkerhed I secret-key
+### Sikkerhed I secret-key: computationel security
 
 I virkelig verden deler **mange beskeder dog samme key**.
 
@@ -159,7 +150,7 @@ Alle tre måder virker ved:
 
 > c = ENC_k(m, IV)
 
-Hvor IV (initialization vector) blot er det samme som nonce.
+Hvor IV (initialization vector) blot er det samme som nonce. 
 
 **Output Feedback** kan **bruges** som en **stream** til at XOR med, og bruges som: ENCk(IV), ENCk(ENCk(IV)), ...
 
