--- a/Dispositioner/10. State Machine Replication.md
+++ b/Dispositioner/10. State Machine Replication.md
@@ -119,7 +119,7 @@ Hvis lederen er korrupt, kan det skade liveness - f.eks hvis en besked aldrig fl
 
 Så lad os kigge på en protokol for *n* parter.
 
-> * Ved input *x* på TOP.IO, send til alle med UCB
+> * Ved input *x* på TOB.IO, send til alle med UCB
 > * Ved input *x* på UCB.IO tilføj til `UnQueed`
 
 Vi har så noget der kaldes en **epoch** eller bare en runde.
@@ -148,7 +148,7 @@ Jeg giver nu blot et hurtigt overblik om ideen med den asynkrone implementering.
 
 Den **asynkrone implementering** har **ingen** forståelse for hvad **tid** er; - hvorfor vi **ikke** kan risikere at **vente** på at en **leder sender** en **blok** på et bestemt tidspunkt.
 
-Protokollen for den asynkrone er meget lang. Men essencen i den er, at **beskeder igen bliver sendt rundt** via et flooding netværk; og så vil **alle parter foreslå den næste blok** U for en epoch.
+Protokollen for den asynkrone er meget lang. Men essencen i den er, at **beskeder bliver sendt rundt** via et flooding netværk; og så vil **alle parter foreslå den næste blok** U for en epoch.
 
 #### Godkender blok
 
