--- a/Dispositioner/11. Blockchain, Growing a tree.md
+++ b/Dispositioner/11. Blockchain, Growing a tree.md
@@ -133,6 +133,8 @@ For hver pulje j, kan hver part trække et nummer. Det regnes ved at sige:
 > * Pi trækker: `draw = SIGN(seed, j)`
 > * Værdien er: `value = tickets * H(seed, j, draw)`
 
+Er værdien høj nok, sender man en blok ud med ens draw
+
 ##### Sikkerhed: DDOS og SEED
 
 Det smarte ved det her system, er at **kun parten der kender sin secrete-key kan udregne sit draw,** men alle der har ens verifycation-key kan udregne om ens draw er korrekt.
@@ -145,15 +147,21 @@ Det bringer os tilbage til at **snakke om det her Seed** der først bliver offen
 
 ### Gro et træ
 
-**Når man vinder**, så **sender** man sammen med sin **draw, en blok** ud - der indeholder hvilken rækkefølge man mener beskeder skal arbejdes med i; samt **hvilken blok der er før den**.
+**Når man vinder**, så **sender** man sammen med sin **draw, en blok** ud - der indeholder hvilken rækkefølge man mener beskeder skal arbejdes med i; samt **hvilken blok der er dens forældre**.
 
-Vi bruger de her blokke til at **gro et træ**. Ved at hvert part, **gror et træ af blokke**; vil de på magisk vist **tangere mod at have agreement**.
+**Som ærlig part**, vil man altid bygge videre på den sti man finder bedst. Så på den måde bestemmer man en bloks forældre.
+
+Når man modtager sådan en blok, vil så kigge påsætte den på dens retmæssige forældre - såfremt man finder den gyldig. Derved opbygges et træ.
 
 #### Bedste sti
 
-Ud fra en rod vil et træ vokse, hvor disse blokke altså påsættes. Fordi at en forældre kan have flere børn; **hvordan ved en part så; hvad den skal se som den bedste sti af træet nu?** 
+Ud fra en rod vil et træ vokse, hvor disse blokke altså påsættes. Men når en blok kan have flere børn; **hvordan ved en part så; hvad den skal se som den bedste sti af træet?** 
 
-**Altså hvilke operationer burde parten have baseret sin state på**? Hvis vi siger at hvert leaf har en **leaf weight**; så vil hver part tage den simple vej fra roden der har den **største samlede vægt**. Hvis der er den samme vægt for alle blade, vil det derved være den **længste path** som er den optimale - fordi ja ... størrelsen er gørelsen 😏 (penis joke). Man vil **altid bygge videre på den path man ser bedst**.
+Med andre ord, når vi har et træ med en masse forskellig data - hvad ser vi så som vores **state eller vores nuværende resultat**?
+
+Hvis vi siger at hvert leaf har en **leaf weight**; så vil hver part tage den simple vej fra roden der har den **største samlede vægt**. 
+
+Hvis der er den samme vægt for alle blade, vil det derved være den **længste path** som er den optimale - fordi ja ... størrelsen er gørelsen 😏 (penis joke). Man vil **altid bygge videre på den path man ser bedst**.
 
 #### Eksempel
 
