--- a/Dispositioner/2. Authentication.md
+++ b/Dispositioner/2. Authentication.md
@@ -30,9 +30,12 @@ Sender og modtager **aftaler** en MAC for hver mulig besked på forhånd.
 
 > MAC = Message Authentication Code
 
-En MAC er en **message authentication code**, og er unik og uafhængig af beskeden.
+En MAC er en **message authentication code**.
 
-Når man **sender en besked**, sender man så den tilhørende MAC, så modtager kan tjekke at de passe sammen.
+> * Unik
+> * Uafhængig af beskeden.
+
+Når man **sender en besked**, så sender man den tilhørende MAC, så modtager kan tjekke at de passe sammen.
 
 > (en tilfældig tabel)
 > 
@@ -77,7 +80,7 @@ Derfor bruges nøgler af 128bit længde, da det er for meget for moderne compute
 
 Lad os tage et eksempel! **Cipher Block Chaining Mac**, er en algoritme til at lave MAC's med.
 
-Den laver en MAC ved dele beskeden op i dele, og så maccer en del ad gangen.
+Den laver en MAC ved dele beskeden op i blokke, og så maccer en del ad gangen.
 
 > * C0 = IV
 > * Ci = ENCk(Mi ⊕ Ci-1)
@@ -98,7 +101,7 @@ Man kan da signere en besked med sin private nøgle, og andre kan tjekke den er 
 
 Der er tre algoritme:
 
-> * `G = (pk, sk)` laver to nøgler
+> * `G = (vk, sk)` laver to nøgler
 > * `SIGNsk(m) = c` laver en signatur for _m_ under nøglen _sk_
 > * `Vpk(m, c) = true/false` verificere signaturen for beskeden
 
@@ -120,13 +123,19 @@ Her er formålet ved at bruge **public key systemet**; for **alle kan have A's p
 
 RSA laver nøglerne:
 
-> Public key: (e, n)
-> Secret key: (d, n)
+> Verificerings key: (e, n)
+> Signing key: (d, n)
+
+N kaldes for modulet og er et **produkt af to primtal**. 
+
+De andre numre er valgt til at tilfredstille en bestemt relation.
 
 Og algoritmerne:
 
 > * `SIGNsk(m): m^d % n` 
 > * `Vpk(m, s): (s^e % n) == m`
+
+Der virker pga. Matematik-magi.
 
 ##### Problem
 
