--- a/Dispositioner/3. Key Management and infrastructure.md
+++ b/Dispositioner/3. Key Management and infrastructure.md
@@ -41,13 +41,13 @@ Det virker ved, at hvis A vil sende M, sender A:
 
 Så kan B bruge Kab til at skaffe Ks, og så skaffe m.
 
-Hver part skal altså have en long term key, for hver anden part. Antallet af nøgler **stiger eksponentielt**.  
+Hver part skal altså have en long term key, for alle andre part. Antallet af nøgler **stiger eksponentielt**.  
 
 Derfor bruges der ofte andre løsninger.
 
 ## Key Distribution Centers
 
-Et Key Distribution Center er baseret på Secret Key teknologi.
+Et Key Distribution Center er baseret på **Secret Key teknologi**.
 
 Ideen er at hver part **deler en key** med KDC'en. Så alle kan kommunikere privat med KDC'en.
 
@@ -83,7 +83,7 @@ Det kræver alle **stoler** på **KDC'en**, da den har den ultimative mulighed f
 
 Hvor KDC'er bruger Secret Keys, bruger Certification Authorities Public Key systemer.
 
-**CA'en** starter med at *  sit egen *  (SKca, PKca); og alle brugere af CA'en får dens public-key.
+**CA'en** starter med at **lave sit egen**  (SKca, PKca); og alle brugere af CA'en får dens public-key.
 
 > * CA laver et keypair
 > * Alle får PKca
@@ -137,8 +137,8 @@ Så kan en CA bekræftes:
 
 > * A: CA1
 > * B: CA2
-> * --> A: CERTca2(B, PKb)
-> * --> A: CERTca1(CA2, PKca2)
+> * B --> A: CERTca2(B, PKb)
+> * B --> A: CERTca1(CA2, PKca2)
 > * A: CA1, CA2
 
 Det kaldes en kæde ved: CERTca2(B, PKb), CERTca1(CA2, PKca2).... da det jo vil kunne fortsætte længe.
