--- a/Dispositioner/7. Consistency.md
+++ b/Dispositioner/7. Consistency.md
@@ -100,8 +100,9 @@ Det viser sig så, at en **protokol bygget** med **Causal Past Relationer** er m
 * Ved input SEND (Pi, m)
 	* Tilføj til CP(Pi)
 	* CP(Pi, Mi) = CP(Pi)
+	* Send (Pi, Mi, CP(Pi, Mi))
 * Pi modtager (Pj, m) sammen med CP(Pj, m)
-	* Vent indtil: Delivered(Pi) U (Pj, m)
+	* Vent indtil Pi har leveret alle i CP(Pj, m) (minus (pj, m))
 	* Så levere (Pj, m)
 	* Tilføj til CP(Pi)
 
