--- a/Dispositioner/8. Synchronous Agreement.md
+++ b/Dispositioner/8. Synchronous Agreement.md
@@ -25,6 +25,8 @@ I min dag til dag tilværelse, betyder det ikke meget; men for en computer kan d
 
 Specielt når vi tænker på rumskibe, fly, sundhedsvæsnet osv.
 
+Det er vigtigt at vi har ure vi kan regne med; og hvis vi har det - så kan vi lave nogle ret interresante ting.
+
 ## Round Based protocols
 
 ### Tid
@@ -128,7 +130,7 @@ Den virker ved at bruge signature under et public-key system; hvorfor protokolle
 
 ### Ideen
 
-Ideen ved protokollen; er at ud fra hvad en broadcaster B siger, så vil alle udskrive  beskeden hvis _m_:
+Ideen ved protokollen; er at ud fra hvad en broadcaster B siger, så vil alle udskrive beskeden hvis _m_:
 
 > * I runde _r_ har _r_ unikke signature
 > * En signatur fra B
@@ -137,7 +139,7 @@ Ideen ved protokollen; er at ud fra hvad en broadcaster B siger, så vil alle ud
 
 **Generelt**:
 
-> * Bekseder sendes med en signatur
+> * Beskeder sendes med en signatur
 
 Hver Pi holder nogle variabler:
 
@@ -147,14 +149,14 @@ Hver Pi holder nogle variabler:
 
 **Indledenderunde (1)**:
 
-> * D flooder `(m, {SIGNd(m)})` og sætter _Rd = m_
+> * B flooder `(m, {SIGNd(m)})` og sætter _Rd = m_
 
 
 **I runderne: _2, ..., n + 1_:**
 
 > * Pj modtager en _m_ og et sæt af signature _S_, hvor _Vj_ ikke indeholder _m_, så er _S_ valid hvis:
 >  * 1) Alle kan verificeres til _m_
->  * 2) En er fra D
+>  * 2) En er fra B
 >  * 3) Antallet er _r ≤_ unikke; 
 > * Og derfor så signere _m_ og send `(m, S + SIGNj(m))` til alle; samt tilføj _m_ til _Vi_
 > 
