--- a/Dispositioner/9. Asynchonous Agreenment.md
+++ b/Dispositioner/9. Asynchonous Agreenment.md
@@ -18,7 +18,7 @@ _Note: den her er ikke så lang, men den er svær og meget der skal skrives på 
 
 ## Motivation
 
-I den Asynkorne Agreement model; har vi ikke en betegnelse for tid - faktisk bruger vi det slet ikke. 
+I den Asynkrone Agreement model; har vi ikke en betegnelse for tid - faktisk bruger vi det slet ikke. 
 
 > Ingen tid
 
@@ -26,7 +26,7 @@ Det har sine fordele og ulemper
 
 > (+) Ingen synkrone ure
 
-hvilket er et helt problem i sig selv
+hvilket kan være helt problem i sig selv
 
 > (-) Ikke skelne langsom, fra: ikke sendt
 
@@ -38,7 +38,7 @@ En anden konsekvens af, at vi ikke kan bruge tid - er at vi ikke har nogen beteg
 
 ## Unscheduled Broadcast
 
-Så når vi ikke har tid, og **ikke kan arbejde i runder**; så har vi at parter **ikke kan vide noget om** - hvornår at **en anden** part har planlagt at **sende en besked**. 
+Så når vi ikke har tid, og **ikke kan arbejde i runder**; så *‌*kan vi ikke vide noget om** - hvornår at **en anden** part har planlagt at **sende en besked**. 
 
 Dette kalder vi for et Unscheduled Broadcast, eller så fint på dansk - et uplanlagt broadcast.
 
@@ -53,17 +53,17 @@ For enhver asynkron protokol gælder følgende:
 > * Et tidspunkt venter for t + 1 beskeder
 > * n > 3t for stort flertal af ærlige parter.
 
-#### Kommandoer
+#### Funktioner
 
 > * Broadcaster B kan få: (BROADCAST, P1, id, m)
 > * Pj kan outputte (DELIVER, P1, ID, m).
 
 #### Egenskaber
 
-> * **Validity 1**: Hvis en korrekt P outputter, og D er korrekt, har D sendt outputtet
-> * **Agreement**: Alle korrekte outputted det samme
-> * **Validity 2**: Hvis D er korrekt og får input m, vil alle outputte m
-> * **Propagation** (flooding): Hvis en korrekt P outputter m, vil alle korrekte
+> * **Validity 1**: Hvis en korrekt P outputter, og B er korrekt, har B sendt outputtet
+> * **Agreement**: Alle korrekte outputter det samme
+> * **Validity 2**: Hvis B er korrekt og får input m, vil alle korrekte outputte m
+> * **Propagation** (flooding): Hvis en korrekt P outputter m, vil alle korrekte outputtet m
 
 ### Bracha Broadcast
 
@@ -71,17 +71,17 @@ For enhver asynkron protokol gælder følgende:
 
 Når en broadcaster B flooder med en besked M, er ideen at:
 
-> * Ærlige parter sender beskeden rundt
-> * Når det ses fra et flertal, erklæres beskeden er klar til offentliggørelse
-> * Når det ses fra et flertal, offenliggøres beskeden
+> * Ærlige parter EKKO beskeden rundt
+> * Når EKKO ses fra et flertal, erklæres beskeden KLAR til offentliggørelse
+> * Når KLAR ses fra et flertal, offenliggøres beskeden
 
 #### Protokollen
 
 > * B skal broadcaste m, så send den til alle
-> * Besked fra D, ekko den til alle andre, medmindre man har set id'et før
+> * Besked fra B, ekko den til alle andre, medmindre man har set id'et før
 > * Ekko fra n - t parter, send klarmelding
-> * Klarmelding fra t + 1 parter, send klarmelding
-> * Klarmelding fra n - t parter, så udskriv.
+> * KLAR fra t + 1 parter, send KLAR
+> * KLAR fra n - t parter, så udskriv.
 
 #### Analyse
 
@@ -94,7 +94,7 @@ Når en broadcaster B flooder med en besked M, er ideen at:
 
 **Validity 1**:
 
-* Hvis B aldrig fik besked på at broadcaste, så sendte maksimalt t et ekko.
+* Hvis B aldrig fik besked på at broadcaste, så sendes maksimalt t ekko.
 * Siden t EKKO eller KLAR ikke er nok til at udskrive, vil ingen ærlig P udskrive.
 
 **‌Propagation**:
@@ -114,7 +114,7 @@ Vi bruger lidt af samme logik som før, og kigger på hvad der skal til for at e
 
 * Pi har modtaget KLAR fra 2t + 1 parter
 * t kan være korrupte; så t + 1 ærlige sendte KLAR til Pi
-* En Pj der outputter, vil også have modtaget klarmelding fra t + 1 parter
+* En Pj der outputter, vil derfor også have modtaget klarmelding fra t + 1 parter
 * Vi ved ikke hvilke parter der er onde; så minimum 1 ærlig part har sendt samme m til begge, hvorfor de outputter det samme.
 
 ## Asyncronous Byzantine Agreement[^Egenskaber udenladt, se /noter/readme.md]
