--- a/Dispositioner/6. Threats and Pitfalls.md
+++ b/Dispositioner/6. Threats and Pitfalls.md
@@ -1,7 +1,8 @@
-* Taxonomy
-	* Hvordan der angribes, X.8000
-	* Hvorfor der angribes, STRIDE
-	* Hvor der angribes og af hvem, EINOO
+* Motivation
+* Angreb - Taksonomi
+	* Hvordan, X.8000
+	* Hvorfor, STRIDE
+	* Hvor og hvem, EINOO
 	* Hvorfor muligt? TPM
 * Illegalt Input Angreb, gennemgang
 	* Overflow angreb
@@ -11,12 +12,13 @@
 	* Speculative Execution
 	* Problemet
 	* Eksempel
-		* Gemme i cachen
-		* Læse fra cachen
+		* *Gemme i cachen*
+		* *Læse fra cachen*
+
 
 # Threats and Pitfalls
 
-_Motivation_
+## Motivation
 
 Når vi tænker på IT-systemer, skal vi altid **overveje sikkerhed**. Derfor arbejder vi med en **Thread Model**.
 
@@ -26,13 +28,13 @@ Når vi tænker på IT-systemer, skal vi altid **overveje sikkerhed**. Derfor ar
 > * Hvilken grader vi tager os af dem
 > * Mængden af forsvar mod dem
 
-## Taxonomy
+## Angreb - Taksonomi
 
 Der er en række forskellige måder at definere angreb på, betegnet med følgende modeller.
 
-### 1.1 Hvordan der angribes, X.8000
+### Hvordan, X.8000
 
-Der er flere måder at kategoriser et angreb på. X.800 standarten angiver to typer angreb over en netværks transmission: Passive og Active angreb.
+Der er flere måder at kategoriser et angreb på. X.8000 standarten angiver to typer angreb over en netværks transmission: Passive og Active angreb.
 
 | Aktive | Passive |
 |:--|:--|
@@ -44,7 +46,7 @@ Det er klart at passive angreb er svære at opdage. Aflytning kan dog stoppes ve
 
 Aktive angreb er nemmere at opdage, men sværere at forhindre.
 
-### 1.2 Hvorfor der angribes, STRIDE
+### Hvorfor, STRIDE
 
 Forskellige angreb kan have forskellige mål. STRIDE betegner de forskellige angrebstyper og deres mål, og er en forkortelse for:
 
@@ -57,9 +59,9 @@ Forskellige angreb kan have forskellige mål. STRIDE betegner de forskellige ang
 
 Det skal dog nævnes, at et angreb sagtens kan høre under flere af disse betegnelser. 
 
-En man-in-the-middle angreb vil ofte f.eks både btegnes som "Spoofing Identity" og "Information Disclosure"
+En man-in-the-middle angreb vil ofte f.eks både betegnes som "Spoofing Identity" og "Information Disclosure"
 
-### 1.3 Hvor der angribes og af hvem, EINOO
+### Hvor og hvem, EINOO
 
 En helt tredje måde at betegne et angreb på, er via EINOO. De to første betegner hvem:
 
@@ -72,7 +74,7 @@ Hvor der bliver angrebet:
 > * **Offline attacks**
 > * **Online attacks**
 
-### 1.4 Hvorfor muligt? TPM
+### Hvorfor muligt? TPM
 
 En sidste måde at kategorier angreb på er via TPM, som betegner hvorfor det var muligt:
 
@@ -80,13 +82,13 @@ En sidste måde at kategorier angreb på er via TPM, som betegner hvorfor det va
 > * **Policy**: vores sikkerheds politik var ikke god nok
 > * **Mechanism**: vores mekanismer var ikke tilstrækkelige.
 
-## 2. Illegalt Input Angreb, gennemgang
+## Illegalt Input Angreb, gennemgang
 
 Mange IT systemer tager input fra brugeren; og hvis disse inputs ikke håndteres korrekt - kan de udnyttes til at udføre angreb.
 
-### 2.1 Overflow angreb
+### Overflow angreb
 
-Vi får input der er længere end forventet. I sprog som C kan dette være en problem.
+Vi får input der er **længere end forventet**. I sprog som C kan dette være en problem.
 
 > **Overflow angreb**
 
@@ -102,7 +104,7 @@ Det kunne f.eks være; at det var muligt i et program at **overskrive en stacks 
 
 Aktivt angreb: modification 
 
-### 2.2 Cross Site Scripting
+### Cross Site Scripting
 
 Hvis en hjemmeside kan tage imod bruger-input, og på en anden side udskriver selv samme input; så kan et sådant input indeholde javascript-kode, som browseren vil køre.
 
@@ -114,7 +116,7 @@ Stride: Spoofing Identity, Tempering, Repudiation og Information Disclosure
 
 EINOO: ekstern, online
 
-### 2.3 Heart Bleed
+### Heart Bleed
 
 Heart Bleed var en bug der var i OpenSSL. Man udnyttede at man i SSL bruger et heartbeat, til at tjekke at en server stadig er i live. 
 
@@ -122,8 +124,8 @@ Dette gøres ved at sende et nonce og dets længde. Serveren vil så gemme dette
 
 I hele to år, glemte man at tjekke om længden der blev sendt rent faktisk matchede; og derved kunne man sende en længde der var længere end selve noncet; og derved få serveren til at sende noget af dens interne memory tilbage.
 
-## 3. Spectre, dybde
-### 3.1 Speculative Execution
+## Spectre, dybde
+### Speculative Execution
 
 Moderne CPU **ramte et loft** da de kom op omkring 4Ghz, og producenter måtte finde andre måder at forhøje hastighederne på. 
 
@@ -133,14 +135,14 @@ Den kunne skulle **vente fordi, den skulle bruge noget data** som den ikke havde
 
 Det vil sige, **hvis en CPU gætter rigtigt** om hvad den skal udføre i fremtiden, og den allerede har udført disse og lagt deres resultater i sin cache, er disse **resultater hurtigt tilgængelig**.
 
-### 3.2 Problemet
+### Problemet
 
 Fejlen som SPECTRE handler om; finder sig i; at **disse spekulative operationer ikke får slettet deres resultater fra cachen**; og man må den måde kan **udnytte** speculative thinking til at **få fat i information**, man ellers ikke vil kunne tilgå.
 
 Dette kunne for eksempel ske ved et **multi-user system** på en computer, eller ved noget så simpelt som **to taps i en browser**.
 
-### 3.3 Eksempel
-#### 3.3.1 Gemme i cachen
+### Eksempel
+#### Gemme i cachen
 ```
 data = [1, 2, 3, 4] // et vilkårligt set af information
 
@@ -161,7 +163,7 @@ Derfor vil `secret` nu komme til at indeholde `data[1000]` - såfremt den tror `
 
 Men data.size kommer nu tilbage til CPU'en og den finder ud af if-sætningen ikke vil være sand; dog fjerner den ikke hvad den lagde i cachen.
 
-#### 3.3.2 Læse fra cachen
+#### Læse fra cachen
 
 Nu er angriberens næste job, at finde en måde at læse fra cachen.
 
