Bell-Lapadula error

--- a/Dispositioner/5. System Security Mechanisms.md
+++ b/Dispositioner/5. System Security Mechanisms.md
@@ -194,7 +194,7 @@ Vi bruger en lattice ved at skrive:
 Den første forsøg på at formaliser en sikkerhedsmodel, var Bell-Lapadula modellen; der af **militæret** blev brugt til at betegne hvordan **information skulle flyde; nemlig opad i herakiet**:
 
 > * **No read up**: S må læse fra objekt o hvis kun C(o) ≤ C(s)
-> * **No write up** S må skrive til objekt o hvis kun C(s) ≤ C(o).
+> * **No write down** S må skrive til objekt o hvis kun C(s) ≤ C(o).
 
 En anden: **Biba modellen, virker omvendt** - i det den betegner at vigtig information kommer ovenfra og skal flyde ned af.
 
